Update toggle color-scheme and contrast, fix init load in dark no flash

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -122,7 +122,7 @@ address {
   }
 }
 
-.contrast {
+[data-contrast='more'] {
   #menu a {
     border: 3px solid var(--menu-fg);
     transition: none;
